src/test/deca/syntax/parser/invalid/if_cond_empty.deca
// Parser test, if with empty condition

{
    if () {
        print(5);
    }
}